# Support-System

./: Metadata.toml
backend/: Cargo.toml  README.md
backend/src/: lib.rs  models.rs
backend/src/routes/: admin.rs  client.rs  mod.rs  multipart.rs
backend/src/services/: discord_webhook.rs  lifecycle.rs  manager.rs  mod.rs
frontend/: package.json
frontend/public/: mypublicfile.txt
frontend/src/: app.css  index.ts
frontend/src/api/: client.ts
frontend/src/components/: SupportAttachmentPicker.tsx  SupportMessageAttachments.tsx  SupportRichTextContent.tsx  SupportRichTextEditor.tsx  TicketConversation.tsx  TicketLinkedServerCard.tsx  TicketPriorityBadge.tsx  TicketStatusBadge.tsx
frontend/src/helpers/: attachments.ts  richText.ts  tickets.ts
frontend/src/pages/: AdminSupportSettingsPage.tsx  AdminSupportTicketPage.tsx  AdminSupportTicketsPage.tsx  DashboardSupportCreatePage.tsx  DashboardSupportTicketPage.tsx  DashboardSupportTicketsPage.tsx
frontend/src/types/: index.ts
migrations/20260404010000_support_system_init/: down.sql  up.sql
migrations/20260404123000_support_ticket_attachments/: down.sql  up.sql
migrations/20260404170000_support_discord_webhook_settings/: down.sql  up.sql
migrations/20260419120000_support_ticket_limits/: down.sql  up.sql
